--- a/snooty.toml
+++ b/snooty.toml
@@ -7,4 +7,16 @@ intersphinx = [
     "https://www.mongodb.com/docs/atlas/objects.inv",
 ]
 
+toc_landing_pages = [
+    "/installation",
+    "/contributing"
+    ]
+
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
+
+[constants]
+driver = "cpp"
+driver-long = "MongoDB C++ Driver"
+driver-short = "C++ driver"
+version = "3.10"
+api = "https://mongocxx.org/api/current"
