--- a/snooty.toml
+++ b/snooty.toml
@@ -19,4 +19,5 @@ driver = "cpp"
 driver-long = "MongoDB C++ Driver"
 driver-short = "C++ driver"
 version = "3.10"
+full-version = "{+version+}.0"
 api = "https://mongocxx.org/api/current"
