update landing pages

--- a/snooty.toml
+++ b/snooty.toml
@@ -8,8 +8,7 @@ intersphinx = [
 ]
 
 toc_landing_pages = [
-    "/installation",
-    "/contributing"
+    "/installation"
     ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
