--- a/snooty.toml
+++ b/snooty.toml
@@ -8,7 +8,8 @@ intersphinx = [
 ]
 
 toc_landing_pages = [
-    "/installation"
+    "/installation",
+    "/api-abi-versioning"
     ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
