DOCSP-35438 programmatic tagging script for cpp driver repo

--- a/source/facets.toml
+++ b/source/facets.toml
@@ -1,7 +1,7 @@
 [[facets]]
-category = "programming_language"
-value = "cpp-driver"
-
-[[facets]]
 category = "target_product"
 value = "drivers"
+
+[[facets]]
+category = "programming_language"
+value = "cpp"
