--- a/snooty.toml
+++ b/snooty.toml
@@ -9,7 +9,8 @@ intersphinx = [
 
 toc_landing_pages = [
     "/installation",
-    "/api-abi-versioning"
+    "/api-abi-versioning",
+    "/get-started",
     ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
