--- a/snooty.toml
+++ b/snooty.toml
@@ -21,3 +21,4 @@ driver-short = "C++ driver"
 version = "3.10"
 full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
+mdb-server = "MongoDB Server"
