--- a/snooty.toml
+++ b/snooty.toml
@@ -7,10 +7,7 @@ intersphinx = [
     "https://www.mongodb.com/docs/atlas/objects.inv",
 ]
 
-toc_landing_pages = [
-    "/installation",
-    "/api-abi-versioning"
-    ]
+toc_landing_pages = ["/installation", "/api-abi-versioning"]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
 
@@ -21,3 +18,5 @@ driver-short = "C++ driver"
 version = "3.10"
 full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
+stable-api = "Stable API"
+mdb-server = "MongoDB Server"
