--- a/snooty.toml
+++ b/snooty.toml
@@ -7,11 +7,7 @@ intersphinx = [
     "https://www.mongodb.com/docs/atlas/objects.inv",
 ]
 
-toc_landing_pages = [
-    "/installation",
-    "/api-abi-versioning",
-    "/get-started",
-    ]
+toc_landing_pages = ["/installation", "/api-abi-versioning", "/get-started"]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
 
@@ -22,3 +18,5 @@ driver-short = "C++ driver"
 version = "3.10"
 full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
+string-data-type = "``string``"
+int-data-type = "``int``"
