--- a/snooty.toml
+++ b/snooty.toml
@@ -12,6 +12,7 @@ toc_landing_pages = [
     "/api-abi-versioning",
     "/get-started",
     "/read",
+    "/indexes",
 ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
