--- a/snooty.toml
+++ b/snooty.toml
@@ -20,3 +20,4 @@ full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
 string-data-type = "``string``"
 int-data-type = "``int``"
+mdb-server = "MongoDB Server"
