DOCSP-40786 - Connection Targets (#20)

--- a/snooty.toml
+++ b/snooty.toml
@@ -25,4 +25,5 @@ driver-short = "C++ driver"
 version = "3.10"
 full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
+stable-api = "Stable API"
 mdb-server = "MongoDB Server"
