--- a/snooty.toml
+++ b/snooty.toml
@@ -14,6 +14,7 @@ toc_landing_pages = [
     "/read",
     "/write",
     "/indexes",
+    "/data-formats",
 ]
 
 sharedinclude_root = "https://raw.githubusercontent.com/10gen/docs-shared/main/"
