--- a/snooty.toml
+++ b/snooty.toml
@@ -27,5 +27,7 @@ driver-short = "C++ driver"
 version = "3.10"
 full-version = "{+version+}.1"
 api = "https://mongocxx.org/api/current"
+string-data-type = "``string``"
+int-data-type = "``int``"
 stable-api = "Stable API"
 mdb-server = "MongoDB Server"
