intro sentences, snooty

--- a/snooty.toml
+++ b/snooty.toml
@@ -11,6 +11,7 @@ toc_landing_pages = [
     "/installation",
     "/api-abi-versioning",
     "/get-started",
+    "/connect",
     "/read",
     "/write",
     "/indexes",
