DOCSP-50747: agg tutorial link

--- a/snooty.toml
+++ b/snooty.toml
@@ -30,3 +30,4 @@ string-data-type = "``string``"
 int-data-type = "``int``"
 stable-api = "Stable API"
 mdb-server = "MongoDB Server"
+language = "C++"
